# PartStacker

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PartStacker.sln  README.md
.github/workflows/: build.yml
Documentation/: Building.md
PartStacker/: AssemblyInfo.cs  Constants.cs  GraphicsDeviceControl.cs  GraphicsDeviceService.cs  MainForm.cs  ModelViewerControl.cs  Part.cs  PartProperties.cs  PartStacker.cs  PartStacker.csproj  Point3.cs  Program.cs  STLBody.cs  Triangle.cs  VertexPositionColorNormal.cs
PartStacker/FormComponents/: PartsList.cs  PartsListItem.cs
PartStacker/Geometry/: Mesh.cs  Point3.cs  Sinterbox.cs  Triangle.cs  Vector.cs
PartStacker/MeshFile/: STL.cs
PartStacker/Properties/PublishProfiles/: FolderProfile.pubxml
PartStacker_Final/: AssemblyInfo.cs  GraphicsDeviceControl.cs  GraphicsDeviceService.cs  MainForm.cs  ModelViewerControl.cs  Part.cs  PartStacker.cs  PartStacker_Final.csproj  Point3.cs  Program.cs  STLBody.cs  Triangle.cs  VertexPositionColorNormal.cs
PartStacker_Final/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Setup1/: Setup1.vdproj
docs/building/: building.md  macos.md  windows.md
samples/: ascii-tetra.stl
src/: CMakeLists.txt
src/configure/: Info.plist.in  pstack_configure.cmake  resource.rc.in  version.hpp.in
src/pstack/: CMakeLists.txt  Info.plist  resource.rc  version.hpp
src/pstack/calc/: CMakeLists.txt  binpack.cpp  binpack.hpp  binpack_cache.hpp  binpack_types.hpp  bool.hpp  mesh.cpp  mesh.hpp  part.hpp  part_properties.hpp  rotations.cpp  rotations.hpp  sinterbox.cpp  sinterbox.hpp  stacker.cpp  stacker.hpp  stacker_thread.hpp  voxelize.cpp  voxelize.hpp
src/pstack/files/: CMakeLists.txt  read.cpp  read.hpp  split.cpp  split.hpp  stl.cpp  stl.hpp
src/pstack/geo/: CMakeLists.txt  functions.hpp  matrix3.hpp  matrix4.hpp  mesh.hpp  point3.hpp  triangle.hpp  vector3.hpp
src/pstack/graphics/: CMakeLists.txt  buffer.cpp  buffer.hpp  global.cpp  global.hpp  shader.cpp  shader.hpp
src/pstack/gui/: CMakeLists.txt  app.cpp  constants.hpp  controls.cpp  controls.hpp  list_view.cpp  list_view.hpp  main_window.cpp  main_window.hpp  part_properties.hpp  parts_list.cpp  parts_list.hpp  preferences.hpp  results_list.cpp  results_list.hpp  transformation.hpp  viewport.cpp  viewport.hpp
src/pstack/util/: CMakeLists.txt  expected.hpp  mdarray.hpp
